# mobile-carto-libs-fork

debug_lib/: CMakeLists.txt
mapsforgereader/: CMakeCache.txt  CMakeLists.txt  Makefile  TODO.md  cmake_install.cmake
mapsforgereader/.history/: CMakeLists_20230317114049.txt  CMakeLists_20230320103610.txt
mapsforgereader/.history/src/mapsforgereader/: MapFile_20230320103819.cpp  MapFile_20230320104259.cpp  MapFile_20230320104409.h  MapFile_20230320105231.h  MapFile_20230320105446.h  MapFile_20230320110039.cpp  MapFile_20230320110223.cpp  MapFile_20230320110234.cpp  MapFile_20230320110305.cpp  MapFile_20230320110438.h  MapFile_20230320110552.cpp  MapFile_20230320110723.h  MapFile_20230320112202.cpp  MapFile_20230320112304.cpp  MapFile_20230320112313.cpp  MapFile_20230320112346.cpp  MapFile_20230320112352.cpp  MapFile_20230320123841.cpp  MapFile_20230320124216.cpp  MapFile_20230320124237.h  MapFile_20230320124327.h  MapFile_20230320124530.cpp  MapFile_20230320124628.cpp  MapFile_20230320124649.cpp  MapFile_20230320124718.cpp  MapFile_20230320124838.cpp  MapFile_20230320124848.cpp  MapFile_20230320125311.cpp
mapsforgereader/.history/src/mapsforgereader/header/: MapFileInfoBuilder_20230317113950.h  MapFileInfoBuilder_20230320110723.h  MapFileInfo_20230317113950.h  MapFileInfo_20230320110438.h  MapFileInfo_20230320110723.h  OptionalFields_20230320110438.h  SubFileParameterBuilder_20230316181956.h  SubFileParameterBuilder_20230320110723.h  SubFileParameters_20230320103523.h  SubFileParameters_20230320104436.h
mapsforgereader/.history/src/mapsforgereader/model/: POI_20230320105231.h  POI_20230320110438.h  Way_20230320104436.h  Way_20230320105230.h
mapsforgereader/.history/src/mapsforgereader/utils/: Converter_20230320111759.h  Converter_20230320112042.h  Converter_20230320112044.cpp  LatLongUtils_20230320105231.h  (+10 more)
mapsforgereader/src/mapsforgereader/: Deserializer.cpp  MFConstants.h  MapFile.cpp  MapFile.h  QueryCalculations.cpp  QueryCalculations.h  QueryParameters.cpp  QueryParameters.h  ReadBuffer.cpp  ReadBuffer.h
mapsforgereader/src/mapsforgereader/header/: MapFileHeader.cpp  MapFileHeader.h  MapFileInfo.cpp  MapFileInfo.h  MapFileInfoBuilder.cpp  MapFileInfoBuilder.h  OptionalFields.cpp  OptionalFields.h  RequiredFields.cpp  RequiredFields.h  SubFileParameterBuilder.h  SubFileParameters.cpp  SubFileParameters.h
mapsforgereader/src/mapsforgereader/model/: MapQueryResult.cpp  MapQueryResult.h  POI.h  Tag.cpp  TileDataBundle.cpp  TileDataBundle.h  Way.cpp  Way.h
mapsforgereader/src/mapsforgereader/utils/: Converter.cpp  LatLongUtils.cpp  LatLongUtils.h  ProjectionUtils.cpp  ProjectionUtils.h  TileUtils.cpp  TileUtils.h
mapsforgevtbuilder/: CMakeLists.txt
mapsforgevtbuilder/src/mapsforgevtbuilder/: LayerEncoder.cpp  LayerEncoder.h  MBVTBuilder.cpp  MBVTBuilder.h  Types.h
(+43 files in other folders)
